added global variable.

--- a/_layouts/TWT.TechWriting.html
+++ b/_layouts/TWT.TechWriting.html
@@ -2,9 +2,11 @@
 <html lang="en">
 <head></head>
   <body>
+   <header> This Website belongs is about {{ site.name }}.</header>
    <main>
-    <div>
-     {{ content }}
-    </div>
-     </main> 
-      </body>
+     <div>
+       {{ content }}
+     </div>
+    </main> 
+   </body>
+  </html>	
